[gd_scene load_steps=2 format=3 uid="uid://c1234567890ab"]

[ext_resource type="Script" path="res://hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="ObjectiveContainer" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="ObjectiveLabel" type="Label" parent="ObjectiveContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialoguePanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueText" type="Label" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0
grow_horizontal = 2
text = "Dialogue text goes here"
horizontal_alignment = 1
autowrap_mode = 3

[node name="DialogueOptions" type="VBoxContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 5
alignment = 1
